fixed menu not centered and background when menu grid wrap

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,9 +10,9 @@
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
-   height: 100vh;
+   min-height: 100vh;
    background-image: url('../images/background.jpg');
-   background-repeat: no-repeat;
+   background-attachment: fixed;
    background-size: cover;
    font-family: 'Josefin Sans', sans-serif;
 }
@@ -38,7 +38,6 @@
    justify-content: center;
    align-items: center;
    width: 100vw;
-   /* background-color: var(--transparent); */
 }
 
 .footer {
@@ -115,7 +114,7 @@
    grid-template-rows: 1fr 1fr;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    gap: 1rem;
-   width: 40vw;
+
    padding: 2rem;
 }
 
